--- a/Core.LocalEnvConfig/Core.LocalEnvConfig.csproj
+++ b/Core.LocalEnvConfig/Core.LocalEnvConfig.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
   </ItemGroup>
 
   <PropertyGroup>
