chore: Adicionando projeto e gitignore pelo Rider

--- a/ConsoleAppTest/appsettings.json
+++ b/ConsoleAppTest/appsettings.json
@@ -1,6 +1,6 @@
 {
   "AppSettings": {
-    "ApplicationName": "TestApplication",
+    "ApplicationName": "ConsoleAppTest",
     "Version": "1.0.0"
   }
 }
