feat: Adicionando mecanismo para obtenção das configurações do Hazelcast

--- a/WeatherApi/WeatherApi.csproj
+++ b/WeatherApi/WeatherApi.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Core.Hazelcast\Core.Hazelcast.csproj" />
     <ProjectReference Include="..\Core.LocalEnvConfig\Core.LocalEnvConfig.csproj" />
   </ItemGroup>
 
