feat: Adicionando obtenção do map do Hazelcast para a inicialização da aplicação

--- a/Core.Hazelcast/Core.Hazelcast.csproj
+++ b/Core.Hazelcast/Core.Hazelcast.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <PackageReference Include="Hazelcast.Net" Version="5.4.0" />
+      <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
     </ItemGroup>
 
     <ItemGroup>
