feat: Mudança para pub/sub
Alteração no script python para mandar o conteúdo da configuração por
tópico
Alteração no client .NET para obter o nome da aplicação
Alteração no client .NET para receber e tratar as mensagens recebidas no
tópico

--- a/hazelcast-environment/Dockerfile
+++ b/hazelcast-environment/Dockerfile
@@ -6,7 +6,7 @@ RUN apt-get update && apt-get install -y \
     curl \
     && rm -rf /var/lib/apt/lists/*
 
-COPY populate_map.py /app/populate_map.py
+COPY python_client.py /app/python_client.py
 RUN pip install hazelcast-python-client flask
 
-CMD ["python", "/app/populate_map.py"]
+CMD ["python", "/app/python_client.py"]
