--- a/ConsoleAppTest/ConsoleAppTest.csproj
+++ b/ConsoleAppTest/ConsoleAppTest.csproj
@@ -8,11 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Core.LocalEnvConfig" Version="1.0.0" />
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
     </ItemGroup>
-
-    <ItemGroup>
-      <ProjectReference Include="..\Core.LocalEnvConfig\Core.LocalEnvConfig.csproj" />
-    </ItemGroup>
-
 </Project>
