--- a/WeatherApi/WeatherApi.csproj
+++ b/WeatherApi/WeatherApi.csproj
@@ -7,12 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Core.Hazelcast" Version="1.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Core.Hazelcast\Core.Hazelcast.csproj" />
-    <ProjectReference Include="..\Core.LocalEnvConfig\Core.LocalEnvConfig.csproj" />
-  </ItemGroup>
-
 </Project>
