feat: Experimento com CustomObjects e registro de TypeDefinitions pelo usuário e pelo framework

--- a/ConsoleAppTest/appsettings.json
+++ b/ConsoleAppTest/appsettings.json
@@ -2,5 +2,7 @@
   "AppSettings": {
     "ApplicationName": "ConsoleAppTest",
     "Version": "1.0.0"
-  }
+  },
+  "Cliente.Config": "{\n  \"Nome\": \"João da Silva\",\n  \"CPF\": \"12345678901\"\n}",
+  "AnotherLib.CustomType": "[\"12345\", \"67890\", \"54321\", \"98765\", \"11223\"]"
 }
